[FIX] website: systray jump down navbar
This commit allows the menu in the nav bar to be hidden and added
in more menu.

Also, we remove the margin-bottom for published switch in the systray

Ticket ID: 1945020

--- a/addons/website/static/src/scss/website.ui.scss
+++ b/addons/website/static/src/scss/website.ui.scss
@@ -59,6 +59,10 @@ body.o_connected_user {
             }
         }
 
+        > li > label.o_switch {
+            margin-bottom: 0;
+        }
+
         .o_mobile_preview a {
             text-align: center;
             font-size: 20px;
